--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -57,8 +57,8 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-link" href="#">
-                                    Vector
+                                <a class="nav-link" href="{% url 'transactions:transaction_add' %}">
+                                    Yangi to'lov
                                 </a>
                             </li>
                         </ul>
