--- a/templates/transactions/transaction_add.html
+++ b/templates/transactions/transaction_add.html
@@ -80,7 +80,7 @@
                             <label class="col-lg-3 control-label text-lg-end pt-2"
                                    for="inputRounded">Buyurtma</label>
                             <div class="col-lg-6">
-                                <select class="form-control mb-3" id="order_id">
+                                <select class="form-control mb-3"  id="order_id" name="order" required>
                                 </select>
                             </div>
                         </div>
@@ -88,7 +88,7 @@
                         <div class="form-group row pb-4">
                             <label class="col-lg-3 control-label text-lg-end pt-2" for="inputFocus">Summa</label>
                             <div class="col-lg-6">
-                                <input class="form-control" id="price">
+                                <input class="form-control" id="price" name="price"  required>
                             </div>
                         </div>
 
