updated signal after transaction created

--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a class="nav-link" href="#">
+                                <a class="nav-link" href="{% url 'clients:debit_credit' %}">
                                     Debit-Credit
                                 </a>
                             </li>
