add url link in header

--- a/templates/orders/debit_credit.html
+++ b/templates/orders/debit_credit.html
@@ -10,7 +10,8 @@
         <h2 class="font-weight-bold text-6">Dashboard ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>Debit-Kredit</span></li>
+                <li><a href="{% url 'clients:debit_credit' %}">Mijozlar</a></li>
+                <li><span>Buyurtmalar</span></li>
             </ol>
         </div>
     </header>
