--- a/templates/clients/client_debit_credit.html
+++ b/templates/clients/client_debit_credit.html
@@ -10,7 +10,8 @@
         <h2 class="font-weight-bold text-6">Dashboard ></h2>
         <div class="right-wrapper">
             <ol class="breadcrumbs">
-                <li><span>Debit-Kredit</span></li>
+                <li><span>Mijozlar</span></li>
+
             </ol>
         </div>
     </header>
