added sidebar one li

--- a/templates/_includes/sidebar.html
+++ b/templates/_includes/sidebar.html
@@ -53,7 +53,12 @@
                             </li>
                             <li>
                                 <a class="nav-link" href="{% url 'clients:debit_credit' %}">
-                                    Debit-Credit
+                                    Mijozlar Debit-Credit
+                                </a>
+                            </li>
+                            <li>
+                                <a class="nav-link" href="#">
+                                    Buyurtmalar Debit-Credit
                                 </a>
                             </li>
                             <li>
