--- a/templates/orders/order_list.html
+++ b/templates/orders/order_list.html
@@ -43,13 +43,13 @@
                         <tr>
                            <th>#</th>
                             <th>Buyurtma raqami</th>
+                            <th>Mijoz telefon raqami</th>
                             <th>Yaratilgan</th>
                             <th>Buyurtma statusi</th>
-                            <th>Mijoz telefon raqami</th>
-                            <th>To'lov statusi</th>
                             <th>Yetqazib berish turi</th>
                             <th>Sahifalar soni</th>
                             <th>Narx</th>
+                            <th>To'lov statusi</th>
 
                         </tr>
                         </thead>
@@ -59,6 +59,7 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td><a href="{% url 'orders:order_detail' order.uuid %}">{{ order.order_number }}</a>
                                 </td>
+                            <td>{{ order.created_by.phone }}</td>
                                 <td>{{ order.created_at|date:"d-m-Y H:i" }}</td>
                                 <td>
                                     {% if order.order_status == 2 %}
@@ -71,11 +72,11 @@
                                         <span class="badge badge-default">{{ order.get_order_status_display }}</span>
                                     {% endif %}
 
-                                <td>{{ order.created_by.phone }}</td>
-                                <td>{{ order.get_cash_type_display }}</td>
+
                                 <td>{{ order.get_delivery_type_display }}</td>
                                 <td>{{ order.page_number }}</td>
                                 <td>{{ order.price|floatformat:"2g" }} so'm</td>
+                                <td>{{ order.total_credit|floatformat:"2g" }} so'm</td>
 
                             </tr>
                         {% endfor %}
