--- a/templates/transactions/transaction_list.html
+++ b/templates/transactions/transaction_list.html
@@ -14,6 +14,7 @@
             </ol>
         </div>
     </header>
+
     <div class="row">
 
         <div class="col-lg-3 col-xl-3">
@@ -105,6 +106,7 @@
         </div>
 
     </div>
+
     <div class="row">
         <div class="col">
             <section class="card">
@@ -124,14 +126,15 @@
                         <tr>
                             <th>#</th>
                             <th class="text-center">Muddat</th>
-                            <th class="text-center">To'lov raqami</th>
-                            <th class="text-center">Ta'rif</th>
+                            <th class="text-center">To'lov<br>raqami</th>
+
                             <th class="text-center">Tur</th>
                             <th class="text-center">Mijoz</th>
-                            <th class="text-center">Mahsulot</th>
+                            <th class="text-center">Buyurtma</th>
                             <th class="text-center">Debet</th>
                             <th class="text-center">Kredit</th>
                             <th class="text-center">Saldo</th>
+                            <th class="text-center">Action</th>
 
                         </tr>
                         </thead>
@@ -141,7 +144,7 @@
                                 <td>{{ forloop.counter }}</td>
                                 <td class="text-center">{{ transaction.created_at|date:"d-m-Y H:i" }}</td>
                                 <td class="text-center">{{ transaction.payment_order|floatformat:"g" }}</td>
-                                <td class="text-center">{{ transaction.description }}</td>
+
                                 <td class="text-center">{{ transaction.get_cash_type_display }}</td>
                                 <td class="text-center">{{ transaction.client }}</td>
                                 <td class="text-center">{{ transaction.order }}</td>
@@ -161,6 +164,14 @@
                                 {% else %}
                                     <td class="text-center text-danger">{{ transaction.company_balance|floatformat:"2g" }}</td>
                                 {% endif %}
+                                <td class="text-center">
+                                    <a href="#modalBasic" class="delete-row modal-basic delete_transaction"
+                                       data-id="{{ transaction.id }}"><i class="far fa-trash-alt"
+                                                                         style="margin-right: 20px"></i></a>
+                                    <a href=""><i class="fas fa-eye"></i></a>
+
+
+                                </td>
                             </tr>
                         {% endfor %}
                         </tbody>
@@ -168,6 +179,33 @@
                 </div>
             </section>
         </div>
+    </div>
+    <div id="modalBasic" class="modal-block mfp-hide">
+        <section class="card">
+            <header class="card-header">
+                <h2 class="card-title">Tranzaksiyani o'chirish?</h2>
+            </header>
+            <div class="card-body">
+                <div class="modal-wrapper">
+                    <div class="modal-text">
+                        <p class="mb-0">Siz tranzaksiyani o‘chirishni xohlaysizmi ?</p>
+                    </div>
+                </div>
+            </div>
+            <footer class="card-footer">
+                <div class="row">
+                    <div class="col-md-12 text-end">
+                        <form method="post" action="{% url 'transactions:transaction_delete' %}">
+                            {% csrf_token %}
+                             <input type="hidden" name="transaction_delete"
+                   id="transaction_delete_modal">
+                            <button type="button"  class="btn btn-default modal-dismiss">Bekor qilish</button>
+                            <button type="submit"  class="btn btn-primary modal-confirm">Tasdiqlash</button>
+                        </form>
+                    </div>
+                </div>
+            </footer>
+        </section>
     </div>
 
 
@@ -194,4 +232,23 @@
     <script src="{% static 'js/examples/examples.datatables.default.js' %}"></script>
     <script src="{% static 'js/examples/examples.datatables.row.with.details.js' %}"></script>
     <script src="{% static 'js/examples/examples.datatables.tabletools.js' %}"></script>
+
+
+    <!-- Examples -->
+    <script src="{% static 'js/examples/examples.modals.js' %}"></script>
+
+
+
+    <script type="application/javascript">
+        document.addEventListener("DOMContentLoaded", function (event) {
+            $('.delete_transaction').click((e) => {
+                document.getElementById('transaction_delete_modal').value = e.target.parentElement.getAttribute('data-id');
+                $('#modalBasic').modal('show');
+            })
+        });
+
+
+
+
+    </script>
 {% endblock %}
