--- a/templates/_includes/navbar.html
+++ b/templates/_includes/navbar.html
@@ -22,16 +22,15 @@
         <span class="separator"></span>
         <a class="dropdown-language nav-link" href="#" role="button" id="dropdownLanguage" data-bs-toggle="dropdown"
            aria-haspopup="true" aria-expanded="false">
-            <img src="{% static 'img/blank.gif' %}" class="flag flag-us" alt="English"/> EN
+            <img src="{% static 'img/blank.gif' %}" class="flag flag-uz" alt="English"/> O'zbek
             <i class="fas fa-chevron-down"></i>
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownLanguage">
-            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-us"
-                                                   alt="English"/> English</a>
-            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-es"
-                                                   alt="English"/> Español</a>
-            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-fr"
-                                                   alt="English"/> Française</a>
+            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-uz"
+                                                   alt="English"/> O'zbek</a>
+            <a class="dropdown-item" href="#"><img src="{% static 'img/blank.gif' %}" class="flag flag-ru"
+                                                   alt="English"/> Русский</a>
+
         </div>
 
         <span class="separator"></span>
@@ -106,10 +105,10 @@
         <div id="userbox" class="userbox">
             <a href="#" data-bs-toggle="dropdown">
 
-                <span class="profile-picture profile-picture-as-text">JD</span>
+                <span class="profile-picture profile-picture-as-text"><i class="bx bx-user"></i></span>
                 <div class="profile-info profile-info-no-role" data-lock-name="John Doe"
                      data-lock-email="johndoe@okler.com">
-                    <span class="name">Hi, <strong class="font-weight-semibold">John Doe</strong></span>
+                    <span class="name"> <strong class="font-weight-semibold">{{ user.first_name }} {{ user.last_name }}</strong></span>
                 </div>
 
                 <i class="fas fa-chevron-down text-color-dark"></i>
